--- a/conceptos/01-position/position.css
+++ b/conceptos/01-position/position.css
@@ -8,10 +8,35 @@
     width: 500px;
     height: 1200px;
     border: 2px solid blue;
+    margin-top: 40px;
+    margin-left: 60px;
+    position: relative; /*relative - referencia - vaso*/
 }
 
 .hijo {
     width: 150px;
     height: 150px;
     border: 1px solid red;
+}
+
+.caja1 {
+    background-color: orange;
+}
+
+.caja2 {
+    background-color: skyblue;
+    position: absolute; /*me permite extraer un elemento de la estructura, cerezas que las puedo poner en cualquier lugar*/
+    top: 20px;
+    left: 30px;
+}
+
+.caja3 {
+    background-color: greenyellow;
+}
+
+.caja4 {
+    background-color: coral;
+    position: fixed; /*ventana del navegador*/
+    bottom: 50px;
+    right: 45px;
 }
