--- a/conceptos/01-position/position.css
+++ b/conceptos/01-position/position.css
@@ -28,10 +28,14 @@
     position: absolute; /*me permite extraer un elemento de la estructura, cerezas que las puedo poner en cualquier lugar*/
     top: 20px;
     left: 30px;
+    /* z-index, representa la profundidad */
+    z-index: 99999;
 }
 
 .caja3 {
     background-color: greenyellow;
+    position: absolute;
+    z-index: 199999;
 }
 
 .caja4 {
