--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,6 +26,27 @@ header {
     color: white;
 }
 
+button {
+    /*forma*/
+    border-radius: 20px;
+    max-height: 40px;
+    padding: 10px 20px;
+}
+
+.btn-white {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+}
+
+/* cuando el mouse este encima de estos elementos */
+.btn-white:hover {
+    background-color: white;
+    color: gray;
+    /* para que el icono del puntero cambie */
+    cursor: pointer;
+}
+
 .gradiente {
     /* linear-gradient(angulo, color1, color2) */
     background-image: linear-gradient(45deg, var(--color1), var(--color2));
