--- a/css/estilos.css
+++ b/css/estilos.css
@@ -86,3 +86,17 @@ button {
 .links li {
     margin: 0 10px;
 }
+
+/* 	HERO */
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 80px;
+}
+
+.hero h1,
+h5 {
+    margin: 10px;
+}
