--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,6 +55,18 @@ h2 {
     cursor: pointer;
 }
 
+.btn_verde {
+    background-color: var(--color1);
+    border: 1px solid var(--color1);
+    color: white;
+    margin-top: 20px;
+}
+
+.btn_verde:hover {
+    background-color: transparent;
+    color: var(--color1);
+}
+
 .gradiente {
     /* linear-gradient(angulo, color1, color2) */
     background-image: linear-gradient(45deg, var(--color1), var(--color2));
