--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,6 +45,14 @@ h2 {
     font-size: 32px;
 }
 
+input {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 10px;
+}
+
 .btn-white {
     background-color: transparent;
     color: white;
@@ -197,6 +205,21 @@ h5 {
     background-position: center;
     color: white;
     padding: 50px;
+    position: relative;
+}
+
+.mascara {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /*opacity: 0 a 1*/
+    opacity: 0.5;
+}
+
+.accion {
+    position: relative;
 }
 
 /* -------------media queries----------------- */
