--- a/css/estilos.css
+++ b/css/estilos.css
@@ -222,6 +222,31 @@ h5 {
     position: relative;
 }
 
+/* Modal */
+.modal {
+    display: none; /*quiero que este escondido*/
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    /* rgba(0-255, 0-255, 0-255, 0-1) */
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    margin: auto;
+    border: 1px solid gray;
+    width: 80%;
+}
+
+.busqueda {
+    padding: 40px;
+    display: flex;
+}
 /* -------------media queries----------------- */
 @media screen and (max-width: 800px) {
     .tarjetas {
