--- a/css/estilos.css
+++ b/css/estilos.css
@@ -231,6 +231,7 @@ h5 {
     z-index: 1;
     width: 100%;
     height: 100%;
+    overflow: auto;
     /* rgba(0-255, 0-255, 0-255, 0-1) */
     background-color: rgba(0, 0, 0, 0.4);
 }
@@ -247,6 +248,41 @@ h5 {
     padding: 40px;
     display: flex;
 }
+
+.canciones {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cancion-container {
+    padding: 20px;
+    max-width: 20%;
+    /* height: 600px; */
+    /* overflow-y: auto; */
+}
+
+.cancion {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px gray;
+}
+
+.cancion-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cancion-img img {
+    width: 100%;
+}
+
+audio {
+    width: 100%;
+}
+
 /* -------------media queries----------------- */
 @media screen and (max-width: 800px) {
     .tarjetas {
